tdf#119007 Crash when paste table from web

regression from
    commit 510033783a9921eef507d424fc5adf6e2696bc4a
    loplugin:useuniqueptr in ScHTMLLayoutParser

Change-Id: I3c6f04ac2c8f188856ec4c9eb6bf520fa03ee97a
Reviewed-on: https://gerrit.libreoffice.org/58480
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>